# github-action-doc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: action_doc.rs  cli.rs  github.rs  main.rs  markdown.rs  workflow_docs.rs
src/github/: action.rs  workflow.rs
src/workflow_docs/: inputs.rs  jobs.rs  triggers.rs
