[package]
name = "github_action_doc"
version = "0.3.0"
authors = ["Scott Rossillo <scott@rossillo.net>"]
edition = "2021"
keywords = ["cli", "github", "actions"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "github-action-doc"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
heck = "0.4.0"
indoc = "1.0.7"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
